Testando modelo de persistência com testes de integração